# LINE-MOD-Pipeline

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  arucoBenchmark.cpp  detector.cpp  linemod_settings.yml  main.cpp  templateGeneration.cpp
benchmark/: pose0.yml
include/: Aruco.h  Benchmark.h  CameraViewPoints.h  Camera_View_Points.h  HighLevelLinemod.h  HighLevelLinemodIcp.h  High_Level_Linemod.h  High_Level_Linemod_Icp.h  Kinect2.h  ModelBuffer.h  ModelImporter.h  Model_Importer.h  OpenglRender.h  Opengl_Render.h  PoseDetection.h  Pose_Detection.h  TemplateGenerator.h  Template_Generator.h  camera_view_points.h  defines.h  high_level_linemod.h  high_level_linemod_icp.h  kinect2.h  model_buffer.h  opengl_render.h  utility.h
models/: lagergehaeuse.yml  p1.ply
shader/: basic.vs  depth.fs
src/: Aruco.cpp  Benchmark.cpp  CameraViewPoints.cpp  Camera_View_Points.cpp  HighLevelLinemod.cpp  HighLevelLinemodIcp.cpp  High_Level_Linemod.cpp  High_Level_Linemod_Icp.cpp  Kinect2.cpp  ModelBuffer.cpp  ModelImporter.cpp  Model_Importer.cpp  OpenglRender.cpp  Opengl_Render.cpp  PoseDetection.cpp  Pose_Detection.cpp  TemplateGenerator.cpp  Template_Generator.cpp  camera_view_points.cpp  defines.cpp  high_level_linemod.cpp  high_level_linemod_icp.cpp  kinect2.cpp  main.cpp  utility.cpp
